--- a/README.Rmd
+++ b/README.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "Distributions of Possible Effects"
-output: rmarkdown::github_document
+output: 
+  rmarkdown::github_document:
+    pandoc_args: --webtex
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
@@ -15,7 +17,49 @@ The threat of endogeneity is ubiquitous within applied empirical research.  Regr
 
 ### What does it do?
 
+Regardless of the source a regressor-error dependency is a regressor-error dependency and can be dealt with in the same manner; namely, via control functions.  Unlike a number of existing forms of sensitivity analysis which treat omitted variables as one of many sources of endogeneity, the control function approach treats all endogeneity as an omitted variables problem.
 
+A simple example aids intuition.  Suppose that we are interested in the effect of some treatment(s) $\mathbf{X}$ on outcome $\mathbf{Y}$.  Assuming constant effects, linearity, and including the intercept in the design matrix we can use the common linear specification
+
+$$\mathbf{Y} = \mathbf{X\beta} + \mathbf{\epsilon^*}$$
+
+where $\mathbf{\epsilon^*}$ is a latent random variable and $\beta$ is the ATE.  Regardless of the source, regressor-error dependencies manifest such that E$(\mathbf{\epsilon^*}|\mathbf{X})=0$ and so 
+
+$$\begin{align*}
+    \hat{\mathbf{\beta}} &= (\mathbf{X}^T\mathbf{X})^{-1}\mathbf{X}^T\mathbf{Y} \\
+    &= \mathbf{\beta} + (\mathbf{X}^T\mathbf{X})^{-1}\mathbf{X}^T\mathbf{\epsilon^*} \neq \beta
+\end{align*}$$
+
+The basic idea of a control function is to construct, usually using instrumental variables, some $\mathbf{V}$ for which E$(\mathbf{\epsilon^*}|\mathbf{X},\mathbf{V})=0$ and include that term as a regressor to purge the dependency.  We are usually in the position where no such control function can be constructed.  Regardless, we know that with the correct control function the regression of $\mathbf{Y}$ on $\mathbf{Z}=(\mathbf{X},\mathbf{V})$ yields coefficients
+
+$$\begin{align*}
+    \hat{\mathbf{\beta}} &= (\mathbf{Z}^T\mathbf{Z})^{-1}\mathbf{Z}^T\mathbf{Y}
+\end{align*}$$
+
+which contains coefficients carrying a causal interpretation.
+
+So what we will do is sample uniformly from the set of valid control functions to build out the distribution of causal effects given our ignorance.  An algorithm to generate one such randomly drawn control function is the following:
+
+![](C:\Users\Schwarz\Desktop\algorithm.PNG)
+
+This algorithm effectively repeatedly uses the Cholesky decomposition to build up a valid augmented covariance matrix from which quantities of interest can be calculated.
+
+To apply this to regression, note that we may rearrange the augmented covariance matrix as
+
+$$\Sigma^* &= \begin{bmatrix}
+                \mathbf{K}_{\Tilde{\mathbf{Z}}\Tilde{\mathbf{Z}}} & \mathbf{K}_{\Tilde{\mathbf{Z}}\mathbf{Y}}\\ 
+                \mathbf{K}_{\mathbf{Y}\Tilde{\mathbf{Z}}} & \mathbf{K_{YY}}
+\end{bmatrix}$$      
+
+with $\tilde{\mathbf{Z}} = (\mathbf{X},\tilde{\mathbf{V}})$ where $\tilde{\mathbf{V}}$ is the control function defined by one run of Algorithm 1.  The coefficients from the regression of $\mathbf{Y}$ on $\mathbf{X}$ and $\tilde{\mathbf{V}}$ are given by
+
+$$\tilde{\mathbf{\beta}} = \mathbf{K}^{-1}_{\tilde{\mathbf{Z}}\tilde{\mathbf{Z}}}\mathbf{K}_{\tilde{\mathbf{Z}}\mathbf{Y}}$$
+
+so one never actually have to generate a realization of $\tilde{V}$ once one has the covariances by which it is defined.  We may similarly derive the R-squared with this information alone:
+
+$$\tilde{R}^2 = \frac{\mathbf{K}^{T}_{\tilde{\mathbf{Z}}\mathbf{Y}}\mathbf{K}^{-1}_{\tilde{\mathbf{Z}}\tilde{\mathbf{Z}}}\mathbf{K}_{\tilde{\mathbf{Z}}\mathbf{Y}}}{\mathbf{K}_{\mathbf{Y}\mathbf{Y}}}$$
+
+By drawing thousands of these control functions we get thousands of coefficient vectors and R-squared values which represent the additional uncertainty in our results to the threat of hidden biases.
 
 ### How do I get it?
 
@@ -57,6 +101,7 @@ mod <- lm(y ~ ., data=dat)
 Since we have control over the process by which the data was generated we know that the model is correct and that the coefficients are unbiased/consistent estimates of the treatment effect of interest.  Suppose, however, that we did not.  We can take draws from the set of valid control functions to build out a distribution of possible effects reflecting ignorance of the regressor-error dependency plaguing our analysis.  The number of draws can be set with `nsims` and the number of cores for parallel computation with `n.cores`.
 
 ```{r results=FALSE}
+set.seed(6161918)
 dope <- DOPE(mod, nsims = 5000, n.cores = parallel::detectCores())
 ```
 
@@ -66,7 +111,7 @@ The result is a dataframe of `nsims` + 1 observations with columns for each of t
 plot_DOPE(dope,"V2") + ggtitle("Distribution of Possible Effects: V2")
 ```
 
-In this example, based upon 5000 draws 84.38% of the estimated effects are greater than zero with a 95% credible interval of -5.45 to 9.83.  The naive estimate is indicated in red.  Since the distribution is simulated setting a seed and using a large number of draws is highly recommended.
+In this example, based upon 5000 draws around 84\% of the estimated effects are greater than zero with a 95% credible interval given by the lower and upper 95 bounds.  The naive estimate is indicated in red.  Since the distribution is simulated setting a seed and using a large number of draws is highly recommended, but these quantities usually become stable with over 20,000 draws.
 
 We can get a little bit more information from the plot by shading based upon the R-squared from each regression and turning off the naive result.
 
@@ -109,3 +154,38 @@ sensitivity_plot(dope,"V2")
 
 The solid dots indicate how the certainty in the effect changes as you say "the world is not that deterministic," reducing the maximum allowable R-squared.  This reduces uncertainty relative to ignornace, indicated by the dashed line, at the cost of restrictiveness, indicated by the hollow points.  In the other direction, one might say that "the world is more deterministic than reflected in my model."  This is represented by the crossed points and increases uncertainty until the lower pessimistic bound on effect certainty.  The proportion of draws rejected by this lower thresholding is given by the filled diamonds.  
 
+### Notes on Development Path
+
+There are a number of additional features that will be added to the package over time.  Of particular interest is adding additional facilities for converting regression results into a format which may be easily used with the package.  Currently only linear models and GLMs are supported, the latter requiring to be fit with the `DOPE_irls` function which retains the IRLS weights and then subsequently "whitens" the data to be fit with `lm`.
+
+By staying firmly within a regression framework the package can be extended to conduct sensitivity analysis on a wite array of semiparametric distributional regression models as well as sampling variability.  For example, a bootstrap step could be implimented by noting that $n$ samples from $n$ observations can be written as an $n \times n$ matrix $\mathbf{Q}$.  For observed data $\mathbf{R}=(\mathbf{Y},\mathbf{X})$ a bootstrap replicate is simply $\mathbf{R}^*=\mathbf{QR}$, the least squares estimate being 
+
+$$\beta^* = (\mathbf{X}^T \mathbf{Q}^T \mathbf{Q} \mathbf{X})^{-1} \mathbf{X}^T \mathbf{Q}^T \mathbf{QY}$$
+
+that is, a weighted least squares estimate.  We can leverage the notion of whitening from Aitken estimators like generalized least squares
+
+$$\hat{\beta} = (\mathbf{X}^T \Omega^{-1} \mathbf{X})^T \mathbf{X}^T \Omega^{-1} \mathbf{Y}$$
+
+and linearly transform the data where $\Omega$ is Cholesky decomposed into $\mathbf{CC}^T$ and one regresses $\mathbf{Y}^* = \mathbf{C}^{-1} \mathbf{Y}$ on $\mathbf{X}^* = \mathbf{C}^{-1} \mathbf{X}$ as an equivalent estimator.
+
+Splines, kernels, and random effects with quadratic penalties have the form
+
+$$\hat{\beta} &= (\mathbf{X}^T\mathbf{X} + \lambda \mathbf{D}^T\mathbf{D})^{-1} \mathbf{X}^Ty$$
+for some smoothing parameter $\lambda$, penalty matrix $D$.  With the data augmentation trick this can be shown to be identical to the regression of 
+$$\begin{align*}
+            \tilde{\mathbf{Y}} = \begin{bmatrix} 
+                                y \\
+                                0
+                        \end{bmatrix} \; \; \text{ on } \tilde{\mathbf{X}} = \begin{bmatrix}
+                                                                        \mathbf{X}\\
+                                                                        \sqrt{\lambda} \mathbf{D}
+                                                                    \end{bmatrix}
+        \end{align*}$$
+that is
+
+$$\hat{\beta} = (\tilde{\mathbf{X}}^T \tilde{\mathbf{X}})^T \tilde{\mathbf{X}}^T \tilde{\mathbf{Y}}$$
+
+More generally, semiparametric regression models often have the form
+
+$$\hat{\beta} = (\mathbf{X}^T \mathbf{W} \mathbf{X} + \lambda \mathbf{D}^T \mathbf{D})^T \mathbf{X}^T \mathbf{W} \mathbf{Y}$$
+which may be put into the desired format by first applying the data augmentation trick and then whitening.
