--- a/README.Rmd
+++ b/README.Rmd
@@ -21,43 +21,57 @@ Regardless of the source a regressor-error dependency is a regressor-error depen
 
 A simple example aids intuition.  Suppose that we are interested in the effect of some treatment(s) $\mathbf{X}$ on outcome $\mathbf{Y}$.  Assuming constant effects, linearity, and including the intercept in the design matrix we can use the common linear specification
 
+<center>
 $$\mathbf{Y} = \mathbf{X\beta} + \mathbf{\epsilon^*}$$
+</center>
 
 where $\mathbf{\epsilon^*}$ is a latent random variable and $\beta$ is the ATE.  Regardless of the source, regressor-error dependencies manifest such that E$(\mathbf{\epsilon^*}|\mathbf{X})=0$ and so 
 
+<center>
 $$\begin{align*}
     \hat{\mathbf{\beta}} &= (\mathbf{X}^T\mathbf{X})^{-1}\mathbf{X}^T\mathbf{Y} \\
     &= \mathbf{\beta} + (\mathbf{X}^T\mathbf{X})^{-1}\mathbf{X}^T\mathbf{\epsilon^*} \neq \beta
 \end{align*}$$
+</center>
 
-The basic idea of a control function is to construct, usually using instrumental variables, some $\mathbf{V}$ for which E$(\mathbf{\epsilon^*}|\mathbf{X},\mathbf{V})=0$ and include that term as a regressor to purge the dependency.  We are usually in the position where no such control function can be constructed.  Regardless, we know that with the correct control function the regression of $\mathbf{Y}$ on $\mathbf{Z}=(\mathbf{X},\mathbf{V})$ yields coefficients
+The basic idea of a control function is to construct, usually using instrumental variables, some $\mathbf{V}$ for which $E(\mathbf{\epsilon^*}|\mathbf{X},\mathbf{V})=0$ and include that term as a regressor to purge the dependency.  We are usually in the position where no such control function can be constructed.  Regardless, we know that with the correct control function the regression of $\mathbf{Y}$ on $\mathbf{Z}=(\mathbf{X},\mathbf{V})$ yields coefficients
 
+<center>
 $$\begin{align*}
     \hat{\mathbf{\beta}} &= (\mathbf{Z}^T\mathbf{Z})^{-1}\mathbf{Z}^T\mathbf{Y}
 \end{align*}$$
+</center>
 
 which contains coefficients carrying a causal interpretation.
 
 So what we will do is sample uniformly from the set of valid control functions to build out the distribution of causal effects given our ignorance.  An algorithm to generate one such randomly drawn control function is the following:
 
+<center>
 <a href="https://imgbb.com/"><img src="https://i.ibb.co/Wng5xrm/algorithm.png" alt="algorithm" border="0"></a>
+</center>
 
 This algorithm effectively repeatedly uses the Cholesky decomposition to build up a valid augmented covariance matrix from which quantities of interest can be calculated.
 
 To apply this to regression, note that we may rearrange the augmented covariance matrix as
 
+<center>
 $$\Sigma^* &= \begin{bmatrix}
                 \mathbf{K}_{\Tilde{\mathbf{Z}}\Tilde{\mathbf{Z}}} & \mathbf{K}_{\Tilde{\mathbf{Z}}\mathbf{Y}}\\ 
                 \mathbf{K}_{\mathbf{Y}\Tilde{\mathbf{Z}}} & \mathbf{K_{YY}}
 \end{bmatrix}$$      
+</center>
 
 with $\tilde{\mathbf{Z}} = (\mathbf{X},\tilde{\mathbf{V}})$ where $\tilde{\mathbf{V}}$ is the control function defined by one run of Algorithm 1.  The coefficients from the regression of $\mathbf{Y}$ on $\mathbf{X}$ and $\tilde{\mathbf{V}}$ are given by
 
+<center>
 $$\tilde{\mathbf{\beta}} = \mathbf{K}^{-1}_{\tilde{\mathbf{Z}}\tilde{\mathbf{Z}}}\mathbf{K}_{\tilde{\mathbf{Z}}\mathbf{Y}}$$
+</center>
 
 so one never actually have to generate a realization of $\tilde{V}$ once one has the covariances by which it is defined.  We may similarly derive the R-squared with this information alone:
 
+<center>
 $$\tilde{R}^2 = \frac{\mathbf{K}^{T}_{\tilde{\mathbf{Z}}\mathbf{Y}}\mathbf{K}^{-1}_{\tilde{\mathbf{Z}}\tilde{\mathbf{Z}}}\mathbf{K}_{\tilde{\mathbf{Z}}\mathbf{Y}}}{\mathbf{K}_{\mathbf{Y}\mathbf{Y}}}$$
+</center>
 
 By drawing thousands of these control functions we get thousands of coefficient vectors and R-squared values which represent the additional uncertainty in our results to the threat of hidden biases.
 
@@ -160,18 +174,24 @@ There are a number of additional features that will be added to the package over
 
 By staying firmly within a regression framework the package can be extended to conduct sensitivity analysis on a wite array of semiparametric distributional regression models as well as sampling variability.  For example, a bootstrap step could be implimented by noting that $n$ samples from $n$ observations can be written as an $n \times n$ matrix $\mathbf{Q}$.  For observed data $\mathbf{R}=(\mathbf{Y},\mathbf{X})$ a bootstrap replicate is simply $\mathbf{R}^*=\mathbf{QR}$, the least squares estimate being 
 
-$$\beta^* = (\mathbf{X}^T \mathbf{Q}^T \mathbf{Q} \mathbf{X})^{-1} \mathbf{X}^T \mathbf{Q}^T \mathbf{QY}$$
+<center>
+$$\beta^* = (\mathbf{X}^T \mathbf{Q}^T \mathbf{Q} \mathbf{X})^{-1} \mathbf{X}^T \mathbf{Q}^T \mathbf{QY}$$</center>
 
 that is, a weighted least squares estimate.  We can leverage the notion of whitening from Aitken estimators like generalized least squares
 
+<center>
 $$\hat{\beta} = (\mathbf{X}^T \Omega^{-1} \mathbf{X})^T \mathbf{X}^T \Omega^{-1} \mathbf{Y}$$
+</center>
 
 and linearly transform the data where $\Omega$ is Cholesky decomposed into $\mathbf{CC}^T$ and one regresses $\mathbf{Y}^* = \mathbf{C}^{-1} \mathbf{Y}$ on $\mathbf{X}^* = \mathbf{C}^{-1} \mathbf{X}$ as an equivalent estimator.
 
 Splines, kernels, and random effects with quadratic penalties have the form
 
-$$\hat{\beta} &= (\mathbf{X}^T\mathbf{X} + \lambda \mathbf{D}^T\mathbf{D})^{-1} \mathbf{X}^Ty$$
+<center>
+$$\hat{\beta} &= (\mathbf{X}^T\mathbf{X} + \lambda \mathbf{D}^T\mathbf{D})^{-1} \mathbf{X}^Ty$$</center>
+
 for some smoothing parameter $\lambda$, penalty matrix $D$.  With the data augmentation trick this can be shown to be identical to the regression of 
+<center>
 $$\begin{align*}
             \tilde{\mathbf{Y}} = \begin{bmatrix} 
                                 y \\
@@ -180,12 +200,13 @@ $$\begin{align*}
                                                                         \mathbf{X}\\
                                                                         \sqrt{\lambda} \mathbf{D}
                                                                     \end{bmatrix}
-        \end{align*}$$
+        \end{align*}$$</center>
 that is
-
-$$\hat{\beta} = (\tilde{\mathbf{X}}^T \tilde{\mathbf{X}})^T \tilde{\mathbf{X}}^T \tilde{\mathbf{Y}}$$
+<center>
+$$\hat{\beta} = (\tilde{\mathbf{X}}^T \tilde{\mathbf{X}})^T \tilde{\mathbf{X}}^T \tilde{\mathbf{Y}}$$</center>
 
 More generally, semiparametric regression models often have the form
+<center>
+$$\hat{\beta} = (\mathbf{X}^T \mathbf{W} \mathbf{X} + \lambda \mathbf{D}^T \mathbf{D})^T \mathbf{X}^T \mathbf{W} \mathbf{Y}$$</center>
 
-$$\hat{\beta} = (\mathbf{X}^T \mathbf{W} \mathbf{X} + \lambda \mathbf{D}^T \mathbf{D})^T \mathbf{X}^T \mathbf{W} \mathbf{Y}$$
 which may be put into the desired format by first applying the data augmentation trick and then whitening.
